; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-x509.c_kludge_next.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-x509.c_kludge_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ALGOID0_TAG = common dso_local global i32 0, align 4
@ENC_TAG = common dso_local global i32 0, align 4
@SIG0_TAG = common dso_local global i32 0, align 4
@SERIAL_TAG = common dso_local global i32 0, align 4
@ISSUER0_TAG = common dso_local global i32 0, align 4
@VALIDITY_TAG = common dso_local global i32 0, align 4
@PUBKEY0_TAG = common dso_local global i32 0, align 4
@ISSUER1_TAG = common dso_local global i32 0, align 4
@SUBJECT1_TAG = common dso_local global i32 0, align 4
@ISSUERNAME_TAG = common dso_local global i32 0, align 4
@EXTENSION_TAG = common dso_local global i32 0, align 4
@EXTVALUE_TAG = common dso_local global i32 0, align 4
@EXTVALUE3_TAG = common dso_local global i32 0, align 4
@SUBJECTNAME_TAG = common dso_local global i32 0, align 4
@SUBJECT0_TAG = common dso_local global i32 0, align 4
@VNAFTER_TAG = common dso_local global i32 0, align 4
@EXTENSIONS_A_TAG = common dso_local global i32 0, align 4
@PADDING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @kludge_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kludge_next(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %39 [
    i32 131, label %5
    i32 144, label %7
    i32 136, label %9
    i32 129, label %11
    i32 135, label %13
    i32 140, label %15
    i32 134, label %17
    i32 139, label %19
    i32 133, label %21
    i32 138, label %23
    i32 142, label %25
    i32 143, label %27
    i32 141, label %29
    i32 132, label %31
    i32 130, label %33
    i32 128, label %35
    i32 137, label %37
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @ALGOID0_TAG, align 4
  store i32 %6, i32* %2, align 4
  br label %41

7:                                                ; preds = %1
  %8 = load i32, i32* @ENC_TAG, align 4
  store i32 %8, i32* %2, align 4
  br label %41

9:                                                ; preds = %1
  %10 = load i32, i32* @SIG0_TAG, align 4
  store i32 %10, i32* %2, align 4
  br label %41

11:                                               ; preds = %1
  %12 = load i32, i32* @SERIAL_TAG, align 4
  store i32 %12, i32* %2, align 4
  br label %41

13:                                               ; preds = %1
  %14 = load i32, i32* @ISSUER0_TAG, align 4
  store i32 %14, i32* %2, align 4
  br label %41

15:                                               ; preds = %1
  %16 = load i32, i32* @VALIDITY_TAG, align 4
  store i32 %16, i32* %2, align 4
  br label %41

17:                                               ; preds = %1
  %18 = load i32, i32* @PUBKEY0_TAG, align 4
  store i32 %18, i32* %2, align 4
  br label %41

19:                                               ; preds = %1
  %20 = load i32, i32* @ISSUER1_TAG, align 4
  store i32 %20, i32* %2, align 4
  br label %41

21:                                               ; preds = %1
  %22 = load i32, i32* @SUBJECT1_TAG, align 4
  store i32 %22, i32* %2, align 4
  br label %41

23:                                               ; preds = %1
  %24 = load i32, i32* @ISSUERNAME_TAG, align 4
  store i32 %24, i32* %2, align 4
  br label %41

25:                                               ; preds = %1
  %26 = load i32, i32* @EXTENSION_TAG, align 4
  store i32 %26, i32* %2, align 4
  br label %41

27:                                               ; preds = %1
  %28 = load i32, i32* @EXTVALUE_TAG, align 4
  store i32 %28, i32* %2, align 4
  br label %41

29:                                               ; preds = %1
  %30 = load i32, i32* @EXTVALUE3_TAG, align 4
  store i32 %30, i32* %2, align 4
  br label %41

31:                                               ; preds = %1
  %32 = load i32, i32* @SUBJECTNAME_TAG, align 4
  store i32 %32, i32* %2, align 4
  br label %41

33:                                               ; preds = %1
  %34 = load i32, i32* @SUBJECT0_TAG, align 4
  store i32 %34, i32* %2, align 4
  br label %41

35:                                               ; preds = %1
  %36 = load i32, i32* @VNAFTER_TAG, align 4
  store i32 %36, i32* %2, align 4
  br label %41

37:                                               ; preds = %1
  %38 = load i32, i32* @EXTENSIONS_A_TAG, align 4
  store i32 %38, i32* %2, align 4
  br label %41

39:                                               ; preds = %1
  %40 = load i32, i32* @PADDING, align 4
  store i32 %40, i32* %2, align 4
  br label %41

41:                                               ; preds = %39, %37, %35, %33, %31, %29, %27, %25, %23, %21, %19, %17, %15, %13, %11, %9, %7, %5
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
